--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,30 +1,38 @@
 {
-  "editor.bracketPairColorization.enabled": true,
-  "editor.guides.bracketPairs": "active",
+  "window.zoomLevel": 1,
+  "editor.fontFamily": "JetBrains Mono, monospace",
   "editor.mouseWheelZoom": true,
-  "editor.fontFamily": "'JetBrains Mono'",
-  "editor.linkedEditing": true,
+  "editor.fontSize": 16,
+  "editor.fontLigatures": true,
+  "editor.letterSpacing": 0.5,
+  "editor.lineHeight": 38,
+  "editor.suggestLineHeight": 32,
+  "editor.tabSize": 2,
+  "editor.cursorBlinking": "smooth",
+  "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "editor.lineHeight": 35,
-  "editor.fontSize": 18,
+  "editor.formatOnSaveMode": "modifications",
+  "editor.formatOnType": true,
+  "editor.acceptSuggestionOnEnter": "off",
+  "editor.bracketPairColorization.enabled": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "files.autoSave": "afterDelay",
-  "window.zoomLevel": 0,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "workbench.enableExperiments": false,
+  "workbench.list.smoothScrolling": true,
+  "workbench.tree.indent": 12,
+  "workbench.editor.highlightModifiedTabs": true,
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "IntelliJ-ish Darcula",
-  "workbench.colorCustomizations": {
-    "statusBar.background": "#1A1A1A",
-    "statusBar.noFolderBackground": "#212121",
-    "statusBar.debuggingBackground": "#263238",
-    // Gutter indicators (left)
-    "editorGutter.modifiedBackground": "#26a0a8b6",
-    "editorGutter.addedBackground": "#0fad3fec",
-    "editorGutter.deletedBackground": "#a52d2dce",
-    // Scrollbar indicators (right)
-    "editorOverviewRuler.addedForeground": "#26a0a8b6",
-    "editorOverviewRuler.modifiedForeground": "#0fad3fec",
-    "editorOverviewRuler.deletedForeground": "#a52d2dce"
-  },
+  "workbench.colorTheme": "Dracula",
+  "zenMode.hideActivityBar": false,
+  "zenMode.restore": false,
+  "zenMode.hideTabs": false,
+  "zenMode.hideLineNumbers": false,
+  "telemetry.telemetryLevel": "off",
+  "editor.linkedEditing": true,
   "prettier.printWidth": 100,
+  
   "vim.normalModeKeyBindingsNonRecursive": [
     {
       "before": ["<space>"],
@@ -47,7 +55,20 @@
   "vim.incsearch": true,
   "vim.useSystemClipboard": true,
   "vim.useCtrlKeys": false,
-  "vim.hlsearch": true,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "workbench.colorTheme": "Theodora's Scrimba",
+  "vim.hlsearch": true
+
+
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#1A1A1A",
+    "statusBar.noFolderBackground": "#212121",
+    "statusBar.debuggingBackground": "#263238",
+    // Gutter indicators (left)
+    "editorGutter.modifiedBackground": "#26a0a8b6",
+    "editorGutter.addedBackground": "#0fad3fec",
+    "editorGutter.deletedBackground": "#a52d2dce",
+    // Scrollbar indicators (right)
+    "editorOverviewRuler.addedForeground": "#26a0a8b6",
+    "editorOverviewRuler.modifiedForeground": "#0fad3fec",
+    "editorOverviewRuler.deletedForeground": "#a52d2dce"
+  },
 }
