--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,11 +1,18 @@
 {
+  "editor.fontSize": 18,
+  "editor.lineHeight": 38,
+  "editor.dragAndDrop": false,
+  "editor.cursorSmoothCaretAnimation": true,
+  "editor.smoothScrolling": true,
+  "editor.wordWrap": "on",
+  "editor.guides.bracketPairs": true,
+  "workbench.editor.wrapTabs": true,
   "editor.fontFamily": "JetBrains Mono, monospace",
   "editor.mouseWheelZoom": true,
   "editor.fontLigatures": true,
-  "editor.letterSpacing": 0.5,
-  "editor.lineHeight": 38,
+  // "editor.letterSpacing": 0.5,
   "editor.tabSize": 2,
-  "editor.fontSize": 15,
+  //   "editor.fontSize": 15,
   "editor.cursorBlinking": "smooth",
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
@@ -22,14 +29,14 @@
   "workbench.tree.indent": 12,
   "workbench.editor.highlightModifiedTabs": true,
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Nord Deep",
+  // "workbench.colorTheme": "Nord Deep",
   "zenMode.hideActivityBar": false,
   "zenMode.restore": false,
   "zenMode.hideTabs": false,
   "zenMode.hideLineNumbers": false,
   "telemetry.telemetryLevel": "off",
   "editor.linkedEditing": true,
-  "prettier.printWidth": 100,
+  "prettier.printWidth": 120,
   "vim.normalModeKeyBindingsNonRecursive": [
     {
       "before": ["<space>"],
@@ -53,4 +60,7 @@
   "vim.useSystemClipboard": true,
   "vim.useCtrlKeys": false,
   "vim.hlsearch": true,
+  "workbench.colorTheme": "Dracula",
+  "typescript.suggest.paths": false ,
+  "javascript.suggest.paths": false
 }
