--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,84 +1,86 @@
 {
-  "editor.fontSize": 18,
-  "editor.lineHeight": 38,
-  "editor.dragAndDrop": false,
-  "editor.cursorSmoothCaretAnimation": true,
-  "editor.smoothScrolling": true,
-  "editor.wordWrap": "on",
-  "editor.guides.bracketPairs": true,
-  "workbench.editor.wrapTabs": true,
-  "editor.fontFamily": "JetBrains Mono, monospace",
-  "editor.mouseWheelZoom": true,
-  "editor.fontLigatures": true,
-  // "editor.letterSpacing": 0.5,
-  "editor.tabSize": 2,
-  "editor.cursorBlinking": "smooth",
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "modifications",
-  "editor.formatOnType": true,
-  "editor.acceptSuggestionOnEnter": "off",
-  "editor.bracketPairColorization.enabled": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.suggest.preview": true,
-  "editor.suggest.shareSuggestSelections": true,
-  "editor.inlineSuggest.enabled": true,
-  "editor.quickSuggestions": {
-    "other": "on",
-    "comments": "on",
-    "strings": "on"
-  },
-  "files.autoSave": "afterDelay",
-  "files.trimFinalNewlines": true,
-  "files.trimTrailingWhitespace": true,
-  "workbench.enableExperiments": false,
-  "workbench.list.smoothScrolling": true,
-  "workbench.tree.indent": 12,
-  "workbench.editor.highlightModifiedTabs": true,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.hover.delay": 100,
-  "workbench.tree.renderIndentGuides": "always",
-  "zenMode.hideActivityBar": false,
-  "zenMode.restore": false,
-  "zenMode.hideTabs": false,
-  "zenMode.hideLineNumbers": false,
-  "telemetry.telemetryLevel": "off",
-  "editor.linkedEditing": true,
-  "prettier.printWidth": 120,
+	"editor.fontSize": 18,
+	"editor.lineHeight": 38,
+	"editor.dragAndDrop": false,
+	"editor.cursorSmoothCaretAnimation": true,
+	"editor.smoothScrolling": true,
+	"editor.wordWrap": "on",
+	"editor.guides.bracketPairs": true,
+	"workbench.editor.wrapTabs": true,
+	"editor.fontFamily": "Fira Code",
+	"editor.mouseWheelZoom": true,
+	"editor.fontLigatures": true,
+	// "editor.letterSpacing": 0.5,
+	"editor.tabSize": 2,
+	"editor.cursorBlinking": "smooth",
+	"editor.formatOnPaste": true,
+	"editor.formatOnSave": true,
+	"editor.formatOnSaveMode": "modifications",
+	"editor.formatOnType": true,
+	"editor.acceptSuggestionOnEnter": "off",
+	"editor.bracketPairColorization.enabled": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.suggest.preview": true,
+	"editor.suggest.shareSuggestSelections": true,
+	"editor.inlineSuggest.enabled": true,
+	"editor.quickSuggestions": {
+		"other": "on",
+		"comments": "on",
+		"strings": "on"
+	},
+	"files.autoSave": "afterDelay",
+	"files.trimFinalNewlines": true,
+	"files.trimTrailingWhitespace": true,
+	"workbench.enableExperiments": false,
+	"workbench.list.smoothScrolling": true,
+	"workbench.tree.indent": 12,
+	"workbench.editor.highlightModifiedTabs": true,
+	"workbench.iconTheme": "material-icon-theme",
+	"workbench.hover.delay": 100,
+	"workbench.tree.renderIndentGuides": "always",
+	"zenMode.hideActivityBar": false,
+	"zenMode.restore": false,
+	"zenMode.hideTabs": false,
+	"zenMode.hideLineNumbers": false,
+	"telemetry.telemetryLevel": "off",
+	"editor.linkedEditing": true,
+	"prettier.printWidth": 120,
 	"prettier.useTabs": true,
-  "vim.normalModeKeyBindingsNonRecursive": [
-    {
-      "before": ["<space>"],
-      "commands": ["workbench.action.files.save"]
-    }
-  ],
-  "vim.visualModeKeyBindingsNonRecursive": [
-    {
-      "before": ["p"],
-      "after": ["p", "g", "v", "y"]
-    }
-  ],
-  "vim.insertModeKeyBindings": [
-    {
-      "before": ["j", "j"],
-      "after": ["<esc>"]
-    }
-  ],
-  "vim.sneak": true,
-  "vim.incsearch": true,
-  "vim.useSystemClipboard": true,
-  "vim.useCtrlKeys": false,
-  "vim.hlsearch": true,
-  "typescript.suggest.paths": false,
-  "javascript.suggest.paths": false,
-  "github.copilot.enable": {
-    "*": true,
-    "yaml": false,
-    "plaintext": false,
-    "markdown": false,
-    "javascript": true,
-    "typescriptreact": true
-  },
-  "diffEditor.renderSideBySide": false,
-  "workbench.colorTheme": "Mariana Pro (Cool)"
+	"vim.normalModeKeyBindingsNonRecursive": [
+		{
+			"before": ["<space>"],
+			"commands": ["workbench.action.files.save"]
+		}
+	],
+	"vim.visualModeKeyBindingsNonRecursive": [
+		{
+			"before": ["p"],
+			"after": ["p", "g", "v", "y"]
+		}
+	],
+	"vim.insertModeKeyBindings": [
+		{
+			"before": ["j", "k"],
+			"after": ["<esc>"]
+		}
+	],
+	"vim.sneak": true,
+	"vim.incsearch": true,
+	"vim.useSystemClipboard": true,
+	"vim.useCtrlKeys": false,
+	"vim.hlsearch": true,
+	"typescript.suggest.paths": false,
+	"javascript.suggest.paths": false,
+	"github.copilot.enable": {
+		"*": true,
+		"yaml": false,
+		"plaintext": false,
+		"markdown": false,
+		"javascript": true,
+		"typescriptreact": true
+	},
+	"diffEditor.renderSideBySide": false,
+	"workbench.colorTheme": "Mariana Pro (Cool)",
+	"prettier.arrowParens": "avoid",
+	"prettier.jsxSingleQuote": true
 }
