Update vs code settings.

--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -7,7 +7,7 @@
   "editor.wordWrap": "on",
   "editor.guides.bracketPairs": true,
   "workbench.editor.wrapTabs": true,
-  "editor.fontFamily": "Fira Code",
+  "editor.fontFamily": "FIra Code",
   "editor.mouseWheelZoom": true,
   "editor.fontLigatures": true,
   // "editor.letterSpacing": 0.5,
@@ -38,7 +38,6 @@
   "workbench.iconTheme": "material-icon-theme",
   "workbench.hover.delay": 100,
   "workbench.tree.renderIndentGuides": "always",
-  "zenMode.hideActivityBar": false,
   "zenMode.restore": false,
   "zenMode.hideTabs": false,
   "zenMode.hideLineNumbers": false,
@@ -74,16 +73,22 @@
     "yaml": false,
     "plaintext": false,
     "markdown": false,
-    "javascript": false,
+    "javascript": true,
     "typescriptreact": true
   },
   "diffEditor.renderSideBySide": false,
-  "workbench.colorTheme": "Panda Syntax",
+  "workbench.colorTheme": "Raijū",
   "prettier.arrowParens": "avoid",
-  "prettier.bracketSpacing": false,
   "prettier.proseWrap": "always",
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
   "editor.minimap.renderCharacters": false,
   "window.menuBarVisibility": "compact",
+  "editor.scrollbar.verticalScrollbarSize": 5,
+  "editor.rulers": [80],
+  "editor.snippetSuggestions": "top",
+  "editor.suggest.localityBonus": true,
+  "workbench.panel.defaultLocation": "right",
+  "zenMode.hideActivityBar": false,
+  "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}"
 }
