--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,34 +1,34 @@
 {
-  // code settings
+  // font
   "editor.fontFamily": "Fira Code",
   "editor.fontSize": 16,
   "editor.fontLigatures": true,
-  "breadcrumbs.enabled": true,
-  "breadcrumbs.filePath": "off",
+  "editor.lineHeight": 38,
+
   "editor.renderControlCharacters": true,
   "editor.renderWhitespace": "none",
-  "editor.lineHeight": 38,
-  "editor.lineNumbers": "on",
+
   "typescript.suggest.paths": false,
   "javascript.suggest.paths": false,
-  "explorer.sortOrder": "modified",
+
+  // layout
+  "breadcrumbs.enabled": false,
+  "breadcrumbs.filePath": "off",
   "workbench.editor.highlightModifiedTabs": true,
   "editor.minimap.enabled": false,
-  "workbench.editor.enablePreview": false,
+
   // format
   "editor.tabSize": 2,
-  "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "modifications",
   "editor.formatOnType": true,
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.wordWrap": "on",
   "workbench.editor.wrapTabs": true,
   "prettier.arrowParens": "avoid",
   "prettier.proseWrap": "always",
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
+
   // suggestion
   "github.copilot.enable": {
     "*": true,
@@ -44,10 +44,10 @@
   "editor.smoothScrolling": true,
   "editor.mouseWheelZoom": true,
   "editor.cursorBlinking": "smooth",
-  "editor.minimap.renderCharacters": false,
   "editor.guides.bracketPairs": true,
+  "editor.guides.indentation": false,
 
-  // format
+
   "editor.bracketPairColorization.enabled": true,
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -65,11 +65,8 @@
 
   "workbench.iconTheme": "material-icon-theme",
   "diffEditor.renderSideBySide": false,
-
-  "editor.inlineSuggest.enabled": true,
   "window.menuBarVisibility": "compact",
   "editor.scrollbar.verticalScrollbarSize": 5,
-  "breadcrumbs": false,
   // vim
   "vim.normalModeKeyBindingsNonRecursive": [
     {
@@ -95,5 +92,16 @@
   "vim.useSystemClipboard": true,
   "vim.useCtrlKeys": false,
   "vim.hlsearch": true,
-  "diffEditor.ignoreTrimWhitespace": false
+
+  "diffEditor.ignoreTrimWhitespace": false,
+
+  // startup
+  "workbench.editor.restoreViewState": false,
+  "files.restoreUndoStack": false,
+  "workbench.startupEditor": "none",
+
+  "gitlens.codeLens.authors.enabled": false,
+  "gitlens.codeLens.recentChange.enabled": false,
+  "editor.codeLens": false,
+  "editor.inlineSuggest.enabled": true,
 }
