--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,7 +1,9 @@
 {
     "editor.fontFamily": "JetBrains Mono",
     "editor.fontSize": 15,
-    "editor.lineHeight": 1.8,
+    "editor.lineHeight": 2.2,
+    "editor.letterSpacing": 0,
+    "editor.mouseWheelZoom": true,
 
     //autocomplete
     "editor.acceptSuggestionOnEnter": "off",
@@ -22,6 +24,19 @@
 
     // Visual
     "editor.smoothScrolling": true,
+    "workbench.list.smoothScrolling": true,
     "editor.cursorSmoothCaretAnimation": true,
-    "editor.minimap.renderCharacters": false
+    "editor.minimap.renderCharacters": false,
+    "window.menuBarVisibility": "compact",
+    "window.titleBarStyle": "custom",
+
+    "workbench.iconTheme": "material-icon-theme",
+    "[typescriptreact]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "workbench.colorTheme": "ReUI II"
+
 }
